<resources>
    <string name="app_name">HomesOrder V</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="featured">Featured</string>
    <string name="new_tab_title">New</string>
    <string name="processing_tab_title">Processing</string>
    <string name="ready_tab_title">Ready</string>
    <string name="dispatched_tab_title">Dispatched</string>
    <string name="products_tab_title">Products</string>
    <string name="promotions_tabs_title">Promotions</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_caps">ADD PRODUCT</string>
    <string name="add_details">ADD DETAILS</string>
    <string name="add_images">ADD IMAGES</string>
    <string name="preview">PREVIEW</string>
    <string name="order_detail">Order Detail</string>
    <string name="product_detail">Product Detail</string>
    <string name="hint_product_name_en">Product name in english</string>
    <string name="choose_category">Choose Category:</string>
    <string name="choose_sub_category">Choose Sub Category:</string>
    <string name="hint_description_en">Product description in english</string>
    <string name="price">Price</string>
    <string name="add_photo"><u>Add Photo</u></string>
    <string name="product_price_required_error">Product Price is required</string>
    <string name="product_description_required_error">Product Description is required</string>
    <string name="product_name_required_error">Product Name is required</string>
    <string name="add_images_error">Please add images to proceed</string>
    <string name="select_pictures">Select Pictures</string>
    <string name="choose_subcategory_error">Please choose sub category to proceed</string>
    <string name="choose_main_category_error">Please choose main category to proceed</string>
    <string name="choose_group">Choose Target Group</string>
    <string name="select_one_category_error">Please select one category</string>
    <string name="choose_group_category_error">Please choose target group and category to proceed</string>
    <string name="valid_price_error">Please enter valid price</string>
    <string name="hint_product_name_ar">Product name in arabic</string>
    <string name="settings">Settings</string>
    <string name="stage_move_under_process">Move to processing</string>


    <string name="status_processing">Processing</string>
    <string name="status_ready">Ready</string>
    <string name="title_order_management_dialog">Move order to :</string>
    <string name="label_language">Language</string>
    <string name="lang_name_arabic">العربية</string>
    <string name="lang_name_eng">English</string>
    <string name="handling_time_days">Preparation time (in days)</string>
    <string name="order_limit_per_day">Per day order capacity </string>
    <string name="hint_description_ar">Product Description in arabic</string>
    <string name="hint_color">White,Blue, Black </string>
    <string name="hint_product_size">S,M,L or 250 gms, 500 gms</string>
    <string name="name">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="shop_vendor_name">Shop / Vendor Name</string>
    <string name="logo_optional">Logo (Optional)</string>
    <string name="choose_language">Choose Language</string>
    <string name="username_your_username_must_be_your_email">User name - Your email will be your username to login</string>
    <string name="valid_email_address_error">Enter a valid email address</string>
    <string name="field_required">This field is required</string>
    <string name="valid_phone_number_error">Enter a valid phone number</string>
    <string name="dont_have_and_account">Dont have and account?</string>
    <string name="register_now">Register Now</string>
    <string name="order_id">Order ID:</string>
    <string name="waiting">Waiting</string>
    <string name="delivery_date">DELIVERY DATE:</string>
    <string name="delivery_time">DELIVERY TIME:</string>
    <string name="customer_address">CUSTOMER ADDRESS:</string>
    <string name="customer_name">CUSTOMER NAME:</string>
    <string name="payment_mode">PAYMENT MODE:</string>
    <string name="total">TOTAL:</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="person_name">Person Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="passwords_match_error">Passwords don\'t match</string>
    <string name="passowrd_six_chars_error">Password must be atleast six characters</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="wrong_password_error">Wrong password</string>
    <string name="invalid_password_error">Password must be 8 characters long and must contain at least one upper case, one lower case, one number and one symbol</string>


    <!--Product Detail -->
    <string name="label_size">SIZE : </string>
    <string name="label_target_group">TARGETED GROUP : </string>
    <string name="label_color">COLOR : </string>
    <string name="label_desc_en">DESCRIPTION ENGLISH : </string>
    <string name="label_desc_ar">DESCRIPTION ARABIC : </string>

    <string name="label_daily_limit">DAILY ORDER LIMIT : </string>
    <string name="label_handling_time">HANDLING TIME : </string>
    <string name="dummy_desc">Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. It\'s also called placeholder (or filler) text. It\'s a convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg typography, font, or layout. Lorem ipsum is mostly a part of a Latin text by the classical author and philosopher Cicero. Its words and letters have been changed by addition or removal, so to deliberately render its content nonsensical; it\'s not genuine, correct, or comprehensible Latin anymore. While lorem ipsum\'s still resembles classical Latin, it actually has no meaning whatsoever. As Cicero\'s text doesn\'t contain the letters K, W, or Z, alien to latin, these, and others are often inserted randomly to mimic the typographic appearence of European languages, as are digraphs not to be found in the original.</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string name="error_default">We faced difficulty this time. Please give another try !</string>
    <string name="error_msg_1001">This email is already registered</string>
    <string name="error_msg_1002">This shop name is in use by other vendor.Please try with other.</string>
    <string name="error_msg_2001">Your credentials are incorrect.</string>
    <string name="unable_to_connect_error">Unable to connect with the internet</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="user_registered_successfully">User Registered Successfully</string>
    <string name="take_me_to_login">Take me to login</string>
    <string name="sign_in_please_wait">Signing In! Please Wait...</string>
    <string name="registering_please_wait">Registering! Please Wait...</string>
    <string name="confirmation_log_out">Do you really want to log out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="proceed">Proceed</string>
    <string name="select_country">Select Country</string>
    <string name="enter_your_username_email">Enter your Username / Email</string>
    <string name="coverage">Your Coverage</string>
    <string name="progress_product_upload">Product upload in progress</string>
    <string name="edit_product">Edit Product</string>
    <string name="original_price">Original Price:</string>
    <string name="discounted_price">Discounted Price:</string>
    <string name="discount_percentage">Discount Percentage:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="promote">Promote</string>
    <string name="promotion">Promotion</string>
    <string name="product_name_ar_required">Product name in arabic is required</string>
    <string name="validation_error_size">Please provide available sizes, for eg: S,M,L,XL or 250 gms, 500 gms or 1 Ltr, 2 Ltr etc</string>
    <string name="btn_update_product">Update</string>
    <string name="product_description_arabic_required_error">Product description in arabic is required</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirmation_update_order_processing">Are you sure to update this order as Processing ?</string>
    <string name="confirmation_update_order_ready">Are you sure to update this order as Ready ?</string>
    <string name="confirmation_update_order_dispatch">Are you sure to update this order as Dispatched ?</string>
    <string name="bank_information">Bank Information</string>
</resources>
