<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/listing_text_size_large"
                android:text="@string/original_price"
                android:textColor="@color/lightGrey" />

            <EditText
                android:id="@+id/original_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:inputType="number"
                android:theme="@style/TextInputTheme"
                android:textColor="@color/shittyRed"
                android:textSize="@dimen/listing_text_size_large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/listing_text_size_large"
                android:text="@string/discounted_price"
                android:textColor="@color/lightGrey" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:inputType="number"
                android:theme="@style/TextInputTheme"
                android:textColor="@color/shittyRed"
                android:textSize="@dimen/listing_text_size_large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/listing_text_size_large"
                android:text="@string/discount_percentage"
                android:textColor="@color/lightGrey" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:focusable="false"
                android:theme="@style/TextInputTheme"
                android:textColor="@color/shittyRed"
                android:textSize="@dimen/listing_text_size_large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/listing_text_size_large"
                android:text="@string/start_date"
                android:textColor="@color/lightGrey" />
            <TextView
                android:id="@+id/start_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                android:textSize="@dimen/listing_text_size_large"
                android:text="DD/MM/YYYY"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="27dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/listing_text_size_large"
                android:text="@string/end_date"
                android:textColor="@color/lightGrey" />
            <TextView
                android:id="@+id/end_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                android:textSize="@dimen/listing_text_size_large"
                android:text="DD/MM/YYYY"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonTheme"
        android:text="@string/promote"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>