<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/black"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_prev"
        >
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/round_rect_shape">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentStart="true"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_id"
                        android:textSize="@dimen/listing_text_size"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/list_item_order_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textSize="@dimen/listing_text_size"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/lightGrey"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/list_item_order_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Waiting"
                        android:textSize="@dimen/listing_text_size"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightGrey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightGrey"
                        android:text="@string/delivery_date"
                        android:textSize="@dimen/listing_text_size"/>
                    <TextView
                        android:id="@+id/list_item_order_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="10dp"
                        android:text="11/26/2017"
                        android:textSize="@dimen/listing_text_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightGrey"
                        android:layout_marginTop="10dp"
                        android:text="@string/payment_mode"
                        android:textSize="@dimen/listing_text_size"/>
                    <TextView
                        android:id="@+id/order_detail_payment_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="10dp"
                        android:text="Cash on Delivery"
                        android:textSize="@dimen/listing_text_size"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightGrey"
                        android:text="@string/delivery_time"
                        android:textSize="@dimen/listing_text_size"/>
                    <TextView
                        android:id="@+id/list_item_order_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="10dp"
                        android:text="2:00 PM"
                        android:textSize="@dimen/listing_text_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightGrey"
                        android:layout_marginTop="10dp"
                        android:text="@string/total"
                        android:textSize="@dimen/listing_text_size"/>
                    <TextView
                        android:id="@+id/order_detail_price_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_marginTop="10dp"
                        android:text="120 AED"
                        android:textSize="@dimen/listing_text_size"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightGrey"
                android:text="@string/customer_name"
                android:textSize="@dimen/listing_text_size"/>
            <TextView
                android:id="@+id/list_item_customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="Abdullah"
                android:textSize="@dimen/listing_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightGrey"
                android:layout_marginTop="10dp"
                android:text="@string/customer_address"
                android:textSize="@dimen/listing_text_size"/>
            <TextView
                android:id="@+id/list_item_customer_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
                android:textSize="@dimen/listing_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textSize="@dimen/listing_text_size_large"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/black"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_detail_product_listing_recycler"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>